--- a/MiniEngine/Core/Core_VS14.vcxproj
+++ b/MiniEngine/Core/Core_VS14.vcxproj
@@ -284,6 +284,7 @@
     </FxCompile>
     <FxCompile Include="Shaders\MotionBlurPrePassCS.hlsl" />
     <FxCompile Include="Shaders\FXAAResolveWorkQueueCS.hlsl" />
+    <FxCompile Include="Shaders\MyEffectCS.hlsl" />
     <FxCompile Include="Shaders\ParticleBinCullingCS.hlsl" />
     <FxCompile Include="Shaders\ParticleDepthBoundsCS.hlsl" />
     <FxCompile Include="Shaders\ParticleDispatchIndirectArgsCS.hlsl" />
