--- a/MiniEngine/Core/Core_VS14.vcxproj.filters
+++ b/MiniEngine/Core/Core_VS14.vcxproj.filters
@@ -742,6 +742,8 @@
     <FxCompile Include="Shaders\MyEffectCS.hlsl">
       <Filter>Shaders\HDR</Filter>
     </FxCompile>
+      <Filter>Shaders\Misc</Filter>
+    </FxCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Math\Functions.inl">
