--- a/MiniEngine/Core/Core_VS14.vcxproj.filters
+++ b/MiniEngine/Core/Core_VS14.vcxproj.filters
@@ -745,11 +745,11 @@
     <FxCompile Include="Shaders\FXAAPass1_RGB2_CS.hlsl">
       <Filter>Shaders\FXAA</Filter>
     </FxCompile>
-    <FxCompile Include="Shaders\MyEffectCS.hlsl">
-      <Filter>Shaders\HDR</Filter>
-    </FxCompile>
-    <FxCompile Include="Shaders\Downcopy4to1CS.hlsl">
+    <FxCompile Include="Shaders\CopyLFtoBack.hlsl">
       <Filter>Shaders\Misc</Filter>
+    </FxCompile>
+    <FxCompile Include="Shaders\LensFlareCS.hlsl">
+      <Filter>Shaders\HDR</Filter>
     </FxCompile>
   </ItemGroup>
   <ItemGroup>
